--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	implementation 'org.webjars:webjars-locator-core'
+	implementation 'org.webjars.npm:htmx.org:1.9.3'
 
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
